--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> Álvaro Ferreira </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/index.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <div class="background">
-            <div class="container">
-                <center>
-                    <h1>Álvaro Ferreira</h1>
-                    <p> Analista de Sistemas </p>
-                    <br>
-                    <br>
-                    <p>
-                        <a target="_blank" href="https://github.com/alvarojfjunior"><img style="max-width: 13%;" src="img/github.png"/></a>&nbsp;
-                        <a target="_blank" href="https://www.linkedin.com/in/%C3%A1lvaro-ferreira-b043a4b9/"><img style="max-width: 13%;" src="img/linkedin.png"/></a>&nbsp;
-                        <a target="_blank" href="https://www.instagram.com/alvarojfjunior/"><img style="max-width: 13%;" src="img/instagram.png"/></a>&nbsp;
-                        <a target="_blank" href="https://www.facebook.com/alvaro.junior.96?ref=bookmarks"><img style="max-width: 13%;" src="img/facebook.png"/></a>&nbsp;
-                    </p>
-                    <p style="font-size: 80%;">
-                        alvarojfjunior@gmail.com
-                        <br>
-                        +55 38 99161-1042
-                        <br>
-                        Montes Claros
-                    </p>
-                    
-                </center>
-            </div>
-        </div>
-    </body>
-</html>
+Hello World
