--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title> Álvaro Ferreira </title>
         <meta charset="UTF-8">
+        <link rel="icon" href="ico.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="ico.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/index.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -27,7 +29,6 @@
                         <br>
                         Montes Claros
                     </p>
-                    
                 </center>
             </div>
         </div>
