--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Álvaro Ferreira </title>
+        <title> Programador Montes Claros Álvaro Ferreira</title>
         <meta charset="UTF-8">
         <link rel="icon" href="ico.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="ico.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="Álvaro Ferreira" content="Programador, Desenvolvimento de Sistemas" />
+        <meta name="robots" content="noindex,nofollow">
+        <meta name="Description" CONTENT="Author: Álvaro Ferreira">
         <link href="css/index.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
@@ -13,7 +17,7 @@
             <div class="container">
                 <center>
                     <h1>Álvaro Ferreira</h1>
-                    <p> Analista de Sistemas </p>
+                    <h2> Analista de Sistemas </h2>
                     <br>
                     <br>
                     <p>
