--- a/relatorio-protocolo/index.html
+++ b/relatorio-protocolo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Relatório de Protocólo </title>
+        <title> Relatório de Protocolo </title>
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script src="js/index.js"></script>
         <meta charset="utf-8">
@@ -25,7 +25,7 @@
             <!-- BODY -->
             <div class="panel panel-default center-block" style="width: 80%;">
                 <div class="panel-heading">
-                    <h3 class="text-center">Relatório de Protocólo</h3>
+                    <h3 class="text-center">Relatório de Protocolo</h3>
                 </div>
 
                 <div class="panel-body">
