--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Programador Montes Claros Álvaro Ferreira</title>
         <meta charset="UTF-8">
+        <meta name="google-site-verification" content="mhmBVNgDUjEoorB7Mag8ncMDWFSRy142_wZRQTlKjjA" />
         <link rel="icon" href="ico.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="ico.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
