--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <META NAME="AUTHOR" CONTENT="Álvaro Ferreira">
+	    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
         <title> Programador Montes Claros Álvaro Ferreira</title>
         <meta charset="UTF-8">
         <meta name="google-site-verification" content="mhmBVNgDUjEoorB7Mag8ncMDWFSRy142_wZRQTlKjjA" />
