--- a/modelo1/index.html
+++ b/modelo1/index.html
@@ -106,6 +106,7 @@
                             <h3 class="text-center"> Thainá Martins </h3>
                         </div>
                     </div>
+                    <div class="visible-xs visible-sm"><br><hr><br></div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div style="margin-left: 50px; margin-right: 50px;">
                             <p class="text-center text-capitalize text-muted">
@@ -116,6 +117,7 @@
                             <h3 class="text-center"> Álvaro Ferreira Martins </h3>
                         </div>
                     </div>
+                    <div class="visible-xs visible-sm"><br><hr><br></div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div style="margin-left: 50px; margin-right: 50px;">
                             <p class="text-center text-capitalize text-muted">
@@ -144,6 +146,7 @@
                         <br>
                     </div>
                 </div>
+                <div class="visible-xs visible-sm"><br><hr><br></div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="text-center center-block" style="margin: 5%;">
                         <p>Telefone: (38)9 3082-0404</p>
@@ -151,6 +154,7 @@
                         <p>Atendimento: de Segunda a Sexta-feira de 8:00 às 18:00</p>
                     </div>
                 </div>
+                <div class="visible-xs visible-sm"><br><hr><br></div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="text-center center-block" style="margin: 5%;">
                         <p>Endereço: Ruas das flores, 13, Bairro das Lamentações</p>
